# FileValidator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yaml
dataformatter/: DataFormatter.h  JSONformatter.cpp  JSONformatter.h  XMLformatter.cpp  XMLformatter.h  YAMLformatter.cpp  YAMLformatter.h
sample_data/json/: json_err_1.txt  json_err_2.txt  json_err_3.txt  json_err_4.txt  json_ok.txt
sample_data/xml/: schema.dtd  xml_dtd_err.txt  xml_embedded_dtd.txt  xml_external_dtd.txt  xml_ok.txt  xml_syntax_err.txt
sample_data/yaml/: yaml_err.txt  yaml_ok.txt
utils/: utils.cpp  utils.h
